# dkvz-blog-backend

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile.jessie  README.md  build.sh
db/: db.empty.sqlite
resources/fixtures/: fixed_wordlist.txt
resources/fixtures/import_tests/: delete.json  valid.json
src/: data-transform.rs  main.rs
src/app/: article_import.rs  dtos.rs  error.rs  guards.rs  handlers.rs  helpers.rs  mod.rs  rate_limiter.rs
src/config/: mod.rs
src/db/: entities.rs  helpers.rs  mappers.rs  mod.rs  queries.rs
src/stats/: ip_location.rs  mod.rs  pseudonymizer.rs
src/utils/: ip_utils.rs  mod.rs  serde_utils.rs  text_utils.rs  time_utils.rs
templates/: article.xhtml  rss.xhtml  sitemap.xhtml
