[package]
name = "dkvz-blog-backend"
version = "0.1.0"
authors = ["DkVZ <github@dkvz.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.2"
r2d2_sqlite = "0.14"
rusqlite = "0.21"
dotenv = "0.15.0"
config = "0.10.1"
serde = { version = "1.0.118", features = ["derive"] }
eyre = "0.4"
color-eyre = "0.3"