[package]
name = "dkvz-blog-backend"
version = "0.1.0"
authors = ["DkVZ <github@dkvz.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2d2 = "0.8.2"
r2d2_sqlite = "0.14"
rusqlite = "0.21"
dotenv = "0.15.0"
config = "0.10.1"
serde = { version = "1.0.118", features = ["derive"] }
eyre = "0.4"
color-eyre = "0.3"
chrono = "0.4"
html2text = "0.2.1"
linecount = "0.1.0"
sha-1 = "0.9.3"
ip2location = "0.1.1"
actix-web = "3"
log = "0.4.0"
env_logger = "0.8.3"
derive_more = { version = "0.99.0", default-features = false, features = ["from", "display"] }
regex = "1.4.3"
lazy_static = "1.4.0"